# torqueindex

./: .env.example  .gitignore  MASTER_API.md  README.md  docker-compose.yml
phoenix-api/: .dockerignore  Dockerfile  README.md  mix.exs
phoenix-api/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
phoenix-api/lib/: torque_gateway.ex  torque_gateway_web.ex
phoenix-api/lib/torque_gateway/: accounts.ex  application.ex  auth.ex  cache.ex  error.ex  mailer.ex  mods.ex  rate_limiter.ex  release.ex  repo.ex  rust_client.ex  store_registry.ex
phoenix-api/lib/torque_gateway/accounts/: refresh_token.ex  user.ex  user_token.ex
phoenix-api/lib/torque_gateway/auth/: access_token.ex
phoenix-api/lib/torque_gateway/mailer/: log.ex
phoenix-api/lib/torque_gateway_web/: endpoint.ex  error_json.ex  router.ex
phoenix-api/lib/torque_gateway_web/channels/: mods_channel.ex  user_socket.ex
phoenix-api/lib/torque_gateway_web/controllers/: auth_controller.ex  fallback_controller.ex  mod_controller.ex  profile_controller.ex  store_controller.ex
phoenix-api/lib/torque_gateway_web/plugs/: authenticate.ex  login_throttle.ex
phoenix-api/priv/repo/migrations/: 20260213230000_enable_pgcrypto_and_create_users.exs  20260213230100_create_refresh_tokens.exs  20260213230200_create_user_tokens.exs
phoenix-api/test/: test_helper.exs
phoenix-api/test/support/: conn_case.ex
rust-service/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
rust-service/src/: main.rs
scripts/: logo_hunter.py
(+1 files in other folders)
